added cd special commands